--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <div id="container"></div>
+  <%= content_tag "div", "Override me!", id: "container", data: { albums: Album.all } %>
 
 </body>
 </html>
