--- a/app/views/albums/_form.html.erb
+++ b/app/views/albums/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@album) do |f| %>
+<%= form_for @album, :html => {:multipart => true} do |f| %>
   <% if @album.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@album.errors.count, "error") %> prohibited this album from being saved:</h2>
@@ -16,8 +16,7 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :cover_image_uid %><br />
-    <%= f.text_field :cover_image_uid %>
+    <%= f.file_field :cover_image %>
   </div>
   <div class="actions">
     <%= f.submit %>
